# domestic-ai-release

./: .gitignore  README.md  bot_shutdown.signal  domestic-ai-startup.sh  init.py  init_functions.py  pyproject.toml
domestic-API/: README.md  callbacks.py  domestic_api.py  operations_queue.py  params.py  pyproject.toml  routes.py  run-api.command  settings.json  tools.py  utils.py
domestic-API/static/: index.js  style.css
domestic-API/templates/: index.html
domestic-bot/: README.md  bot.py  run-bot.command  startup.py  status.py
domestic-tools/domestic-imagen/: README.md  pyproject.toml  run-imagen.command  usage.yo
domestic-tools/domestic-imagen/client/: index.html
domestic-tools/domestic-rembg/: README.md  remove_background.py  run-rembg.command
domestic-ui/: package-lock.json  package.json  pnpm-lock.yaml  run-ui.command  svelte.config.js  vite.config.js
domestic-ui/.svelte-kit/: ambient.d.ts  tsconfig.json
domestic-ui/.svelte-kit/output/client/.vite/: manifest.json
domestic-ui/.svelte-kit/output/server/: index.js  manifest.js
domestic-ui/.svelte-kit/output/server/.vite/: manifest.json
domestic-ui/.svelte-kit/output/server/chunks/: index.js  index2.js  (+2 more)
domestic-ui/src/: app.css
domestic-ui/src/lib/: index.js  stores.js
domestic-ui/src/lib/components/: Center.svelte  Connection.svelte  Flow.svelte  Flux.svelte  Info.svelte  Input.svelte  MidButton.svelte  ModalityMenu.svelte  Output.svelte  Settings.svelte  WelcomeModal.svelte
domestic-ui/src/routes/: +layout.svelte  +page.svelte
domestic-ui/src/routes/boilerplate/: +page.svelte
(+57 files in other folders)
